# Creoflow

./: CMakeLists.txt  README-中文.md  修复环境问题.md  快速启动脚本.bat
Core/GDCore/: CommonTools.h  DocMainPage.h
Core/GDCore/Project/: Project.h
Extensions/ExampleJsExtension/: JsExtension.js
Extensions/SystemInfo/: Extension.cpp
GDJS/Runtime/: runtimeobject.ts  runtimescene.ts
newIDE/app/: package-lock.json  package.json
newIDE/app/src/Promotions/: PromotionsSlideshow.js
